# src/adapters/drivers/http/controllers/orderController.ts
@@ -16,7 +16,47 @@ class OrderController {
            description: 'Order info',
            required: true,
            schema: {
+             client_id: 'fd1e95e9-ab3e-462e-9b0c-246267ac2567',
+               products: [
+                {
+                  id:'fd1e95e9-ab3e-462e-9b0c-246267ac2567',
+                  amount:2
+                }
+               ]
+             },
+             
+           }
+       }
+     */
+
+    const checkInBodySchema =   z.object({
+      client_id: z.string(),
+      products: z.array(z.object({
+        id:z.string(),
+        amount:z.number()
+      })),
+    });
+
+    const { client_id, products } = checkInBodySchema.parse(req.body);
+
+    const order = await orderService.create({
+      client_id,
+      products,
+    });
+
+    return res.json(order);
+  }
+  async update(req: Request, res: Response): Promise<Response | null> {
+    /*
+       #swagger.tags = ['Order']
+       #swagger.summary = 'Update order'
+       #swagger.parameters['Order'] = {
+           in: 'body',
+           description: 'Order info',
+           required: true,
+           schema: {
              properties: {
+               id: { type: 'string' },
                client: { type: 'string' },
                products: {
                  type: 'array',
@@ -29,36 +69,42 @@ class OrderController {
                      Sobremesa: { type: 'string' }
                    }
                  }
-               }
+               },
+               status: { type: 'string' }
              },
              example: {
+               id: '975dbab0-3cee-4059-8529-2757924ca737',
                client: 'john doe',
                products: [{
                  Lanche: 'Hamburguer',
                  Acompanhamento: 'Batata Frita',
                  Bebida: 'Suco de Laranja',
                  Sobremesa: 'Pudim'
-               }]
+               }],
+               status: 'Recebido'
              }
            }
        }
      */
 
     const checkInBodySchema = z.object({
-      client: z.string(),
+      id: z.string(),
       products: z.string(),
+      status: z.string(),
+      client_id: z.string(),
     });
 
-    const { client, products } = checkInBodySchema.parse(req.body);
+    const { id, products, status, client_id } = checkInBodySchema.parse(req.body);
 
-    const order = await orderService.create({
-      client,
-      products,
-    });
+    // const orderUpdated = await orderService.update({
+    //   id,
+    //   products,
+    //   status,
+    //   client_id,
+    // });
 
-    return res.json(order);
+    return res.json({});
   }
-
   async getAll(req: Request, res: Response): Promise<Response> {
     /*
        #swagger.tags = ['Order']
@@ -120,65 +166,7 @@ class OrderController {
     return res.json(order);
   }
 
-  async update(req: Request, res: Response): Promise<Response | null> {
-    /*
-       #swagger.tags = ['Order']
-       #swagger.summary = 'Update order'
-       #swagger.parameters['Order'] = {
-           in: 'body',
-           description: 'Order info',
-           required: true,
-           schema: {
-             properties: {
-               id: { type: 'string' },
-               client: { type: 'string' },
-               products: {
-                 type: 'array',
-                 items: {
-                   type: 'object',
-                   properties: {
-                     Lanche: { type: 'string' },
-                     Acompanhamento: { type: 'string' },
-                     Bebida: { type: 'string' },
-                     Sobremesa: { type: 'string' }
-                   }
-                 }
-               },
-               status: { type: 'string' }
-             },
-             example: {
-               id: '975dbab0-3cee-4059-8529-2757924ca737',
-               client: 'john doe',
-               products: [{
-                 Lanche: 'Hamburguer',
-                 Acompanhamento: 'Batata Frita',
-                 Bebida: 'Suco de Laranja',
-                 Sobremesa: 'Pudim'
-               }],
-               status: 'Recebido'
-             }
-           }
-       }
-     */
-
-    const checkInBodySchema = z.object({
-      id: z.string(),
-      products: z.string(),
-      status: z.string(),
-      client: z.string(),
-    });
-
-    const { id, products, status, client } = checkInBodySchema.parse(req.body);
-
-    const orderUpdated = await orderService.update({
-      id: id,
-      products: products,
-      status: status,
-      client: client,
-    });
-
-    return res.json(orderUpdated);
-  }
+  
 }
 
 export const orderController = new OrderController();
